syntax = "proto3";
option go_package = "./login_proto";
package login_proto;


//注册用户
message ReqRegisterAccoutMsg {
   string username = 1; //用户
   string password = 2; //密码
}

//登陆
message ReqLoginMsg {
   string username = 1; //用户
   string password = 2; //密码
}

message ReqCreatePlayerMsg {
     string playername = 1; //玩家名称
     int32  sex = 2; //性别
     int32  job = 3; //游戏职业
}